Parsing strings in KeyString can throw Overflow error

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 7.0.0-rc0, 6.0.6
    • Affects Version/s: None
    • Component/s: None
    • None
    • Storage Execution
    • Fully Compatible
    • ALL
    • v6.0
    • Execution Team 2023-02-20, Execution Team 2023-02-06, Execution Team 2023-03-06, Execution Team 2023-03-20, Execution Team 2023-04-03
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      KeyString is normally stored with the record part when used for indexes. This allows parsing code to peek at the next byte.

      This is not the case for clustered collections and we may get an Overflow error when parsing strings that may contain null. We are not actually reading out of bounds but the user facing error is wrong.

            Assignee:
            Shin Yee Tan
            Reporter:
            Henrik Edin
            Votes:
            2 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: