SERVER-72107 Check for remaining bytes when reading strings with Nuls